--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "preset": "expo-module-scripts"
   },
   "devDependencies": {
-    "expo-module-scripts": "^2.0.0"
+    "expo-module-scripts": "^2.0.0",
+    "expo-modules-core": "^0.11.8"
   },
   "dependencies": {
     "@expo/config-plugins": "^4.0.14"
