--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "expo-location",
+  "name": "custom-expo-location",
   "version": "14.2.2",
   "description": "Allows reading geolocation information from the device. Your app can poll for the current location or subscribe to location update events.",
   "main": "build/Location.js",
@@ -24,14 +24,6 @@
     "compass",
     "heading"
   ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/expo/expo.git",
-    "directory": "packages/expo-location"
-  },
-  "bugs": {
-    "url": "https://github.com/expo/expo/issues"
-  },
   "author": "650 Industries, Inc.",
   "license": "MIT",
   "homepage": "https://docs.expo.dev/versions/latest/sdk/location/",
@@ -39,8 +31,7 @@
     "preset": "expo-module-scripts"
   },
   "devDependencies": {
-    "expo-module-scripts": "^2.0.0",
-    "expo-modules-core": "^0.11.8"
+    "expo-module-scripts": "^2.0.0"
   },
   "dependencies": {
     "@expo/config-plugins": "^4.0.14"
